--- a/style.css
+++ b/style.css
@@ -1,12 +1,51 @@
-body {
-    min-height: 100%;
-    height: 100%;
+/* header {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  } */
+  
+  h1 {
+    margin: 0;
+  }
+  
+  main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-}
-
-button {
-    width: 200px;
-}
+    justify-content: center;
+    height: 80vh;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  .buttons {
+    display: flex;
+    gap: 20px;
+  }
+  
+  button {
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  button:hover {
+    background-color: #3e8e41;
+  }
+  
+  /* footer {
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  } */
+  
